Preparation for the 1.0 version
* Add JDI remote expression evaluator for proxy mode

debugger_evaluate was broken in proxy mode because both JaninoEvaluator
and JShellEvaluator evaluate expressions locally in the proxy JVM, which
lacks the debuggee's classes. This adds JdiRemoteEvaluator which parses
expressions via Janino's Parser.parseExpression() into an AST, then
walks the AST and executes each operation remotely in the debuggee via
JDI/JDWP.

Supports: literals, variables, this, field access, method invocation,
array access/length, arithmetic, comparisons, boolean short-circuit,
string concat, ternary, casts, instanceof, new, unary ops, parentheses.

HybridEvaluationProvider gains a remoteOnly mode (JDI only, no local
JShell/Janino) used by MCPRemoteDebugProxy. In embedded mode, JDI is
tried first with Janino/JShell fallback.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Making launching the example workflow a bit easier

* Prepare branch for 1.0.0 release

* Update SKILL.md

* Add proxy shaded classifier and Maven launcher

* Document Maven proxy launcher as default

* Fix native frame detection, null-safe error messages, and cast-wrapped expression prefix

Detect native top frames in debugger_evaluate before attempting JDI method invocation, returning an actionable error that suggests debugger_variables or setting a breakpoint at a Java frame.

Make error messages null-safe in JdiRemoteEvaluator and HybridEvaluationProvider by falling back to e.toString() when
e.getMessage() is null. Stop double-wrapping DebuggerException in HybridEvaluationProvider.evaluateRemoteOnly by rethrowing it directly.

Allow cast-wrapped expressions like ((Type) context.get("x")).method() in ObjectInspectorTool while still rejecting similarly-named identifiers like contextFake. Uses a dual-check approach: cast-stripped and paren-stripped, with a post-variable-name character guard.

Update SKILL.md to clarify the proxy/debuggee JVM boundary for object_inspector and add