@@ -23,7 +23,8 @@ See `doc/debug-skill.md` for copy/symlink/rename workflows.
 |---|---|---|
 | `launch-managed-nontty.sh` | Start a process as a supervised child in non-TTY mode (no detach). | Default launch for JDWP debug targets used by agents, with robust process lifecycle and signal forwarding. Also bundled in `.claude/skills/debug/scripts/` for skill portability. |
 | `run-with-hotreload.sh` | Start the Descartes MCP server with Java agent flags and predictable startup behavior for class hot reload workflows. | Run the embedded MCP server with hot reload support during local development. |
-| `run-remote-proxy.sh` | Start the Descartes MCP remote debug proxy with consistent defaults, logging, and auto-build behavior. | Run a local proxy that bridges MCP clients to a JDWP target process. |
+| `run-remote-proxy.sh` | Start the Descartes MCP remote debug proxy with consistent defaults, logging, and auto-build behavior. | Run proxy mode from local source changes (development fallback). |
+| `run-remote-proxy-from-maven.sh` | Pull the published proxy shaded JAR from Maven repositories and launch it directly. | Default proxy launcher for released versions (no local build required). |
 
 ## `launch-managed-nontty.sh`
 
@@ -160,6 +161,7 @@ Starting the MCP remote debug proxy manually is error-prone because it requires:
 - Capturing startup/runtime output in a stable log file.
 
 This script standardizes that workflow so agents and humans can start the proxy with one command and predictable behavior.
+Use this script when validating local source changes; for released versions, prefer `run-remote-proxy-from-maven.sh`.
 
 ### How it works
 
@@ -228,3 +230,62 @@ On failure:
 
 - This script runs the proxy in the foreground by design.
 - Use `scripts/launch-managed-nontty.sh` for default agent-driven debug target launch.
+
+## `run-remote-proxy-from-maven.sh`
+
+### Name
+
+`run-remote-proxy-from-maven.sh`
+
+### Why it exists
+
+For release validation and operational usage, it is useful to run proxy mode directly from the published Maven artifact instead of the local workspace build.
+This is the recommended default launcher for proxy mode.
+This script standardizes that flow:
+- Pull the shaded proxy artifact classifier from Maven repositories.
+- Resolve the exact JAR path in the local Maven repository.
+- Start the proxy with stable JVM flags.
+
+### How it works
+
+1. Resolves artifact coordinates (`groupId`, `artifactId`, `version`, `classifier`).
+2. Downloads the artifact via `maven-dependency-plugin:get`.
+3. Locates the downloaded JAR in the configured Maven local repository.
+4. Starts proxy mode with:
+- `--add-opens jdk.attach/sun.tools.attach=ALL-UNNAMED`
+- `-jar <artifact-with-classifier>`
+5. Passes remaining arguments directly to `MCPRemoteDebugProxy`.
+
+### Usage
+
+```bash
+scripts/run-remote-proxy-from-maven.sh [wrapper-options] [proxy-args...]
+```
+
+### Examples
+
+Run released proxy artifact with defaults:
+
+```bash
+scripts/run-remote-proxy-from-maven.sh
+```
+
+Run with explicit target:
+
+```bash
+scripts/run-remote-proxy-from-maven.sh --version 1.0.0 --jdwp-host localhost --jdwp-port 5005 --mcp-port 9090
+```
+
+Run with mirrored logs:
+
+```bash
+scripts/run-remote-proxy-from-maven.sh --log-file logs/descartes-proxy.log --auto-discover
+```
+
+### Notes
+
+- `--version` is optional when running from a workspace with `pom.xml` (script auto-detects `project.version`).
+- Pass `--version <version>` to pin a specific released artifact.
+- `--log-file <path>` mirrors output via `tee`.
+- If artifact resolution fails and local source is available, the script falls back to `mvn -DskipTests install` (disable with `--no-local-build-fallback`).
+- Defaults: `groupId=com.bitsapplied.descartes`, `artifactId=descartes-mcp`, `classifier=proxy`.
